# cfjord

./: .clang-format  CMakeLists.txt  LICENSE
include/cfjord/: list.h  memory.h  types.h
src/: cfjord_list.c  cfjord_memory.c
